--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>hello world</h1>
+  <header>
+    <nav></nav>
+  </header>
+  <main></main>
+  <footer></footer>
 </body>
 </html>
