--- a/index.html
+++ b/index.html
@@ -12,5 +12,11 @@
   </header>
   <main></main>
   <footer></footer>
+  <section>
+    <h2>SLIDER</h2>
+    <div>
+      slider content
+    </div>
+  </section>
 </body>
 </html>
