--- a/index2.html
+++ b/index2.html
@@ -7,10 +7,6 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>about</h1>
-  <div>
-    slider
-  </div>
-  <h2>new content</h2>
+  new
 </body>
 </html>
