--- a/about.html
+++ b/about.html
@@ -12,5 +12,11 @@
     slider
   </div>
   <h2>new content</h2>
+  <section>
+    <h2>Ololo</h2>
+    <p>
+      ....
+    </p>
+  </section>
 </body>
 </html>
