--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Valera</title>
+  <title>Images</title>
 </head>
 <body>
   <h1>about</h1>
@@ -12,5 +12,9 @@
     slider
   </div>
   <h2>new content</h2>
+  <img src="">
+    <img src="">
+    <img src="">
+    <img src="">
 </body>
 </html>
